[package]
name = "tk-rand-core"
version = "0.1.0"
edition = "2024"
authors = ["Julian Wajong <jwajong@terrakernel.com>"]
description = "NSA-standard CSPRNG string generation core."
license = "MIT"
repository = "https://"
keywords = ["nsa", "csping", "chacha20", "security", "random"]
categories = ["algorithms", "cryptography"]
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "build.rs",
    "README.md",
    "LICENSE",
]

[dependencies]
rand = "0.9.2"
rand_chacha = "0.9.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
cargo_metadata = "0.23.1"